--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="fr">
   <head>
     <title>Recette du gateau au chocolat</title>
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="recette_chocolat.css" />
   </head>
   <body>
@@ -40,6 +41,7 @@
       </tr>
     </table>
     </div>
+    <div>
     <div class = "colonne1 colonne">
     <h2>Ingrédients</h2>
     <div class = "liste1">
@@ -67,6 +69,7 @@
     </tr>
     
 </table>
+</div>
 </div>
 
 </div>
